Refactor evidence highlighting logic in content.js for improved text normalization and matching. Update popup.html title and button text to reflect functionality change from downloading to analyzing Facebook posts.

--- a/popup.html
+++ b/popup.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Facebook單篇貼文下載</title>
+    <title>Facebook單篇貼文分析</title>
     <style>
       body {
         font-family: Arial, sans-serif;
@@ -26,8 +26,8 @@
     </style>
   </head>
   <body>
-    <h3>下載Facebook貼文</h3>
-    <button id="extract">下載</button>
+    <h3>分析Facebook貼文</h3>
+    <button id="extract">分析</button>
     <script src="popup.js"></script>
   </body>
 </html>
