Enhance Facebook post analysis functionality by adding buttons for analyzing posts and viewing results. Update tooltip text for clarity. Modify popup.html to reflect the new button purpose. Implement dynamic button addition on page mutation.

--- a/popup.html
+++ b/popup.html
@@ -19,6 +19,7 @@
         cursor: pointer;
         width: 100%;
         border-radius: 5px;
+        margin-bottom: 10px;
       }
       button:hover {
         background-color: #145dbf;
@@ -26,8 +27,8 @@
     </style>
   </head>
   <body>
-    <h3>分析Facebook貼文</h3>
-    <button id="extract">分析</button>
+    <h3>Facebook貼文分析</h3>
+    <button id="extract">添加分析按鈕</button>
     <script src="popup.js"></script>
   </body>
 </html>
